Extended answer to first question

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <br>
     <br>
     <span id="p2">In 2+ sentences describe who you are and what you do</span>
-    <p>I'm Sarath Pillai from Bahrain. I'm 20 years old and I study computer science and economics at Brown University. 
+    <p>I'm Sarath Pillai from Bahrain. I'm 20 years old and I study computer science and economics at Brown University. I have currently taken a gap year and am taking some classes with Harvard and in particualar I would like to explore the field of Computer Science. 
     <br>
         <br>
         <span id="p2">Why are you taking this course?</span>
