Added project 2 link and github link

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
    <span id="p2">Project<span id="f"> 2</span></span>
      <br>
      <br>
-     View: [link]
+     View: <a href="http://p2.dwa15-practice.me">Welcome to project 2!</a>
         <br>
-     Github: [link]
+     Github: <a href="https://github.com/smpillai/p2">Github Repository</a>
      <br>
      <br>
      <br>
